fixing images height on mobile

--- a/_sass/prepostsex/_layout.scss
+++ b/_sass/prepostsex/_layout.scss
@@ -192,6 +192,7 @@ table {
     top: 60px;
     right: 0;
     left: 0;
+    bottom: 0;
   }
 
   img {
